Fixed input focus bug and too much scrolling issue

--- a/app/assets/stylesheets/classes/_compose.sass
+++ b/app/assets/stylesheets/classes/_compose.sass
@@ -41,7 +41,3 @@
     margin: 0
     padding: 5px
     height: 208px
-
-  +mini-to-small-screens
-    .composition
-      height: 100%
